[package]
name = "bytesize"
version = "1.0.0"
edition = "2021"
authors = ["Dietrich Epp <depp@zdome.net>"]
readme = "README.md"
repository = "https://github.com/depp/bytesize-rs"
homepage = "https://github.com/depp/bytesize-rs"
license = "MIT or Apache-2.0"
description = """
Human-readable byte sizes.
"""

[dependencies]
